--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retail Data Visualization</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <title>Upload CSV</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Retail Data Visualization</h1>
-    <div>{{ plot1|safe }}</div>
-    <div>{{ plot2|safe }}</div>
-    <div>{{ plot3|safe }}</div>
-    <div>{{ plot4|safe }}</div>
-    <div>{{ plot5|safe }}</div>
+    <div class="container mt-5">
+        <h1 class="text-center">Upload CSV File</h1>
+        <form action="/upload" method="post" enctype="multipart/form-data" class="mt-4">
+            <div class="form-group">
+                <input type="file" name="file" class="form-control-file">
+            </div>
+            <div class="text-center">
+                <input type="submit" value="Upload" class="btn btn-primary">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
