--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <h1 class="text-center">Upload CSV File</h1>
         <form action="/upload" method="post" enctype="multipart/form-data" class="mt-4">
             <div class="form-group">
-                <input type="file" name="file" class="form-control-file">
+                <input type="file" name="file" class="form-control">
             </div>
             <div class="text-center">
                 <input type="submit" value="Upload" class="btn btn-primary">
