--- a/templates/results.html
+++ b/templates/results.html
@@ -6,15 +6,23 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Results</h1>
-        <div class="alert alert-info text-center">
-            Error: {{ error }}
-        </div>
-        <h2 class="text-center">Generate Plots</h2>
-        <form action="/plot" method="post" class="mt-4">
+        <h1 class="text-center">{{ model_type }} Results</h1>
+        <h3 class="mt-4">Metrics</h3>
+        <ul>
+            {% for key, value in metrics.items() %}
+            <li><strong>{{ key }}:</strong> {{ value }}</li>
+            {% endfor %}
+        </ul>
+        <h3 class="mt-4">Columns after Encoding</h3>
+        <ul>
+            {% for column in columns %}
+            <li>{{ column }}</li>
+            {% endfor %}
+        </ul>
+        <form action="/plot" method="post">
             <input type="hidden" name="file_name" value="{{ file_name }}">
             <div class="text-center">
-                <input type="submit" value="Generate Plots" class="btn btn-primary">
+                <input type="submit" value="Plot Graphs" class="btn btn-primary">
             </div>
         </form>
     </div>
