--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Upload CSV</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ML Model Selector</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Upload CSV File</h1>
-        <form action="/upload" method="post" enctype="multipart/form-data" class="mt-4">
-            <div class="form-group">
-                <input type="file" name="file" class="form-control">
-            </div>
-            <div class="text-center">
-                <input type="submit" value="Upload" class="btn btn-primary">
-            </div>
-        </form>
+        <div class="jumbotron text-center">
+            <h1 class="display-4">Machine Learning Model Selector</h1>
+            <p class="lead">Upload your CSV file and select the machine learning model to analyze your data.</p>
+            <hr class="my-4">
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="file">Upload CSV File</label>
+                    <input type="file" class="form-control-file" id="file" name="file">
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg">Upload</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
