--- a/templates/select_encoding.html
+++ b/templates/select_encoding.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Encoding</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Select Encoding for Columns</h1>
-        <h3 class="mt-4">List of String Variables (for Encoding)</h3>
-        <ul>
-            {% for column in string_columns %}
-            <li>{{ column }}</li>
-            {% endfor %}
-        </ul>
-        <form action="/select_encoding" method="post" class="mt-4">
+        <h1 class="text-center">Select Encoding</h1>
+        <form action="/select_encoding" method="post">
             <input type="hidden" name="file_name" value="{{ file_name }}">
             <div class="form-group">
                 <label for="one_hot_columns">Select columns for One Hot Encoding:</label>
-                <select name="one_hot_columns" class="form-control" multiple>
-                    {% for column in columns %}
+                <select class="form-control" id="one_hot_columns" name="one_hot_columns" multiple>
+                    {% for column in string_columns %}
                     <option value="{{ column }}">{{ column }}</option>
                     {% endfor %}
                 </select>
             </div>
             <div class="form-group">
                 <label for="label_columns">Select columns for Label Encoding:</label>
-                <select name="label_columns" class="form-control" multiple>
+                <select class="form-control" id="label_columns" name="label_columns" multiple>
                     {% for column in string_columns %}
                     <option value="{{ column }}">{{ column }}</option>
                     {% endfor %}
                 </select>
             </div>
             <div class="text-center">
-                <input type="submit" value="Apply Encoding" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary">Next</button>
             </div>
         </form>
     </div>
